--- a/index.html
+++ b/index.html
@@ -114,7 +114,25 @@
     }
 </style>
 </head>
-<body>
+<body> background-color: #111;
+    color: #fff;
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+header img {
+    width: 150px;
+}
+section {
+    margin: 20px 0;
+}
+.whatsapp-button img {
+    width: 60px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+ 
+
+
   <header>
     <img src="logo-goyeryluxe.png" alt="Logo Goyery Luxe">
     <h1>Goyery Luxe - Joyas Exclusivas</h1>
