--- a/index.html
+++ b/index.html
@@ -114,22 +114,7 @@
     }
 </style>
 </head>
-<body> background-color: #111;
-    color: #fff;
-    font-family: Arial, sans-serif;
-    text-align: center;
-}
-header img {
-    width: 150px;
-}
-section {
-    margin: 20px 0;
-}
-.whatsapp-button img {
-    width: 60px;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
+<body>
  
 
 
