--- a/index.html
+++ b/index.html
@@ -289,3 +289,45 @@
 </body>
 
 </html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Goyery Luxe</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <!-- Logo con fondo negro -->
+  <header class="encabezado">
+    <img src="img/logo.png" alt="Logo Goyery Luxe" class="logo" />
+  </header>
+
+  <!-- Menú de navegación -->
+  <nav class="navegacion">
+    <a href="index.html">Inicio</a>
+    <a href="nosotros.html">Nosotros</a>
+    <a href="productos.html">Productos</a>
+    <a href="#" class="carrito-btn" onclick="mostrarCarrito()">🛒</a>
+  </nav>
+
+  <!-- Sección de inicio -->
+  <section class="inicio">
+    <h1>Bienvenidos a Goyery Luxe</h1>
+    <p>Donde la elegancia de la esmeralda y el oro toma vida.</p>
+    <div class="imagenes-inicio">
+      <img src="img/esmeralda-inicio.jpg" alt="Esmeralda" />
+      <img src="img/oro-inicio.jpg" alt="Oro" />
+    </div>
+  </section>
+
+  <!-- Botón flotante de WhatsApp -->
+  <a href="https://wa.me/573508106411" class="whatsapp-btn" target="_blank">
+    <img src="img/whatsapp.png" alt="WhatsApp" />
+  </a>
+
+  <script src="script.js"></script>
+  <script src="carrito.js"></script>
+</body>
+</html>
