--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       justify-content: center;
       padding: 30px;
       gap: 20px;
+
     }
     .product-card {
       background-color: #1a1a1a;
@@ -115,6 +116,7 @@
 </style>
 </head>
 <body>
+
   <header>
     <img src="logo-goyeryluxe.png" alt="Logo Goyery Luxe">
     <h1>Goyery Luxe - Joyas Exclusivas</h1>
@@ -284,5 +286,7 @@
 </style>
   <div class="carrito-info">🛒 Carrito: <span id="contador">0</span></div>
 </body>
-
+  <h2>Carrito</h2>
+<div id="carrito-container"></div>
+<div id="resumen-container"></div>
 </html>
