--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
     
     <div class="product-card">
-      <img src="anillo1.jpg" alt="Anillo Clásico Oro Verde">
+      <img src="img/anillo8.jpg" alt="Anillo Clásico Oro Verde">
       <h3>Anillo Clásico Oro Verde</h3>
       <p class="price">$2.850.000</p>
       <div style="margin-top: 10px;">
